codegen/ui_tests/export_mod_cfg.stderr
error: expected attribute arguments in parentheses: #[rhai_fn(...)]
  --> ui_tests/export_mod_cfg.rs:12:3
   |
12 | #[rhai_fn]
   |   ^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_mod`
  --> ui_tests/export_mod_cfg.rs:23:8
   |
23 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of unresolved module or unlinked crate `test_mod`
   |
   = help: if you wanted to use a crate named `test_mod`, use `cargo add test_mod` to add it to your `Cargo.toml`
